[tool.poetry]
name = "python3-dev-template"
version = "0.1.0"
description = "template repository for python3 development"
authors = ["neruo <neruo>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.6b0"
isort = "^5.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
