[tool.poetry]
name = "python3-dev-template"
version = "0.2.0"
description = "template repository for python3 development"
authors = ["neruo <neruo>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9,<3.10"
jupyter = "^1.0.0"
mlflow = "^1.27.0"
pytest = "^7.1.2"
poethepoet = "^0.16.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"
mypy = "^0.971"
isort = "^5.10.1"

[tool.poe.tasks]
mkl = "pip3 install -I --no-binary :all: numpy scipy"
torch-cu111 = "pip3 install torch torchvision --extra-index-url https://download.pytorch.org/whl/cu111"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
